--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -14,7 +14,6 @@
 	  </tr>
 	</thead>
 	<tbody>
-
 <?r Conference.order(:abstract).each do |c| ?>
 <tr>
   <td>#{ a(c.acronym, c.url) }</td>
@@ -23,16 +22,17 @@
   <td align='center'>#{ c.deadline.strftime("%Y-%m-%d") }</td>
   <td align='center'>#{ c.notification.strftime("%Y-%m-%d") }</td>
   <td>#{ c.address }</td>
-  <td>#{ a('Edit', '/conflist/edit', c.id)} | #{ a('Delete', '/conflist/delete', c.id)}</td>
+  <td>#{ a('Edit', '/conflist/edit', c.id)} | 
+      <a href="javascript:checkDelete('#{@captcha_question}','#{c.id}')">Delete</a>
+  </td>
 </tr>
 <?r end ?>
-
 	</tbody>
       </table>
       <p align="right"> &nbsp;</p>
     </div>
 
-<br><br>
+    <br><br>
 
     <form method="post" action="/conflist/add">
       <fieldset>
@@ -62,7 +62,7 @@
 	<label for="form-cfp">Call For Paper</label><br>
 	<textarea name="cfp" cols=100 rows=10></textarea><br>
 
-	What is: #{simple_captcha} = <input type="text" name="answer" /><br>
+	What is: #{@captcha_question} = <input type="text" name="answer" /><br>
 
 	<input type="submit" /> <input type="reset"  />
       </fieldset>
