add snap scripts to preview the link, not so useful.

--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="/conflist/js/sorttable.js"></script>
     <script type="text/javascript" src="/conflist/js/niftycube.js"></script>
     <script type="text/javascript" src="/conflist/js/util.js"></script>
+    <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script>
   </head>
 
   <body>
