--- a/view/edit.xhtml
+++ b/view/edit.xhtml
@@ -1,6 +1,6 @@
 <h1>Edit - <i>#{@c.acronym}</i></h1>
 
-<form method="post" action="/conflist/update/#{@c.id}">
+<form method="post" action="/conflist/update/#{@c.id}" onSubmit="return checkForm(this);">
   <fieldset>
     <legend>Information</legend>
 
@@ -84,9 +84,12 @@
 	<td>What is:  </td>
 	<td>#{simple_captcha} = <input type="text" name="answer" /></td>
       </tr>
+      <tr>
+      	<td></td>
+	<td><input type="submit" /> <input type="reset" /></td>
+      </tr>
     </table>
     
-    <input type="submit" /> <input type="reset"  />
   </fieldset>
 </form>
 
