--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/conflist/js/sorttable.js"></script> 
     <script type="text/javascript" src="/conflist/js/niftycube.js"></script>
     <script type="text/javascript" src="/conflist/js/util.js"></script>
-<!--    <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script> -->
+    <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/jscal2.css" />
     <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/border-radius.css" />
@@ -16,6 +16,12 @@
     <script type="text/javascript" src="/conflist/js/jscal/jscal2.js"></script>
     <script type="text/javascript" src="/conflist/js/jscal/lang/en.js"></script>
 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/conflist/js/animatedcollapse.js"></script>
+    <script type="text/javascript">
+      animatedcollapse.addDiv('add', 'fade=1')
+      animatedcollapse.init()
+    </script>
   </head>
 
   <body>
