--- a/view/edit.xhtml
+++ b/view/edit.xhtml
@@ -78,7 +78,7 @@
       </tr>
       <tr>
 	<td>Call for Paper:</td>
-	<td><textarea name="cfp" cols="100" rows="10">#{@c.cfp}</textarea></td>
+	<td><textarea class="ckeditor" name="cfp" cols="100" rows="10">#{@c.cfp}</textarea></td>
       </tr>
       <tr>
 	<td>What is:  </td>
