--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -3,18 +3,8 @@
   <head>
     <title>Conference List</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
     <link rel="stylesheet" type="text/css" href="/conflist/css/screen.css" />
-
-    <script type="text/javascript" src="/conflist/js/sorttable.js"></script> 
-    <script type="text/javascript" src="/conflist/js/niftycube.js"></script>
-    <script type="text/javascript" src="/conflist/js/util.js"></script>
-    <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/jscal2.css" />
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/border-radius.css" />
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/matrix/matrix.css" />
-    <script type="text/javascript" src="/conflist/js/jscal/jscal2.js"></script>
-    <script type="text/javascript" src="/conflist/js/jscal/lang/en.js"></script>
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="/conflist/js/animatedcollapse.js"></script>
@@ -22,17 +12,31 @@
       animatedcollapse.addDiv('add', 'fade=1')
       animatedcollapse.init()
     </script>
+    <script type="text/javascript" src="/conflist/js/jjmenu.js"></script>
+    <link rel="stylesheet" type="text/css" href="/conflist/css/jjmenu.css" />
+
+    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/jscal2.css" />
+    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/border-radius.css" />
+    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/matrix/matrix.css" />
+    <script type="text/javascript" src="/conflist/js/jscal/jscal2.js"></script>
+    <script type="text/javascript" src="/conflist/js/jscal/lang/en.js"></script>
+
+    <script type="text/javascript" src="/conflist/js/sorttable.js"></script> 
+    <script type="text/javascript" src="/conflist/js/niftycube.js"></script>
+    <script type="text/javascript" src="/conflist/js/util.js"></script>
+
+    <script type="text/javascript" src="/conflist/js/ckeditor/ckeditor.js"></script> 
+    <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script>
   </head>
 
   <body>
     #{ @content }
 
     <p align="right">
-      By: <a href="http://xueruini.myipcn.org">Ruini Xue</a> |
+      <a href="http://xueruini.myipcn.org">Ruini Xue</a> |
       <a href="http://hpc.cs.tsinghua.edu.cn">Institute of High Performance Computing</a> |
       <a href="http://www.cs.tsinghua.edu.cn">Department of Computer Science and Technology</a> |
       <a href="http://www.tsinghua.edu.cn">Tsinghua University</a>
     </p>
-    
   </body>
 </html>
