add aToolTip, css refine.

--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -12,8 +12,12 @@
       animatedcollapse.addDiv('add', 'fade=1')
       animatedcollapse.init()
     </script>
+
     <script type="text/javascript" src="/conflist/js/jjmenu.js"></script>
     <link rel="stylesheet" type="text/css" href="/conflist/css/jjmenu.css" />
+
+    <script type="text/javascript" src="/conflist/js/atooltip.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/conflist/css/atooltip.css" />
 
     <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/jscal2.css" />
     <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/border-radius.css" />
@@ -23,10 +27,11 @@
 
     <script type="text/javascript" src="/conflist/js/sorttable.js"></script> 
     <script type="text/javascript" src="/conflist/js/niftycube.js"></script>
-    <script type="text/javascript" src="/conflist/js/util.js"></script>
 
     <script type="text/javascript" src="/conflist/js/ckeditor/ckeditor.js"></script> 
     <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script>
+
+    <script type="text/javascript" src="/conflist/js/util.js"></script>
   </head>
 
   <body>
