--- a/view/index.xhtml
+++ b/view/index.xhtml
@@ -1,4 +1,4 @@
-    <span id ="localclock"></span><br><br>
+    <span id ="localclock" style="color:#FEC92C"></span><br><br>
     <div class="roundbox">
       <table class="sortable" id="main">
 	<caption>Conference List</caption>
@@ -6,9 +6,9 @@
 	  <tr>
 	    <th class="sorttable_nosort">Acronym
 	    <th class="sorttable_nosort">Full Name
-	    <th width="105pt" title="click to sort">Abstract
-	    <th width="105pt" title="click to sort">Deadline
-	    <th width="115pt" title="click to sort">Notification
+	    <th width="105pt" title="click to sort!">Abstract
+	    <th width="105pt" title="click to sort!">Deadline
+	    <th width="115pt" title="click to sort!">Notification
 	    <th class="sorttable_nosort rightmost">Address
 	  </tr>
 	</thead>
@@ -30,10 +30,10 @@
 <?r end ?>
 <tr class="record" id="record#{c.id}" onClick="window.open('/conflist/view/#{c.id}')">
   <td>#{a(c.acronym, c.url)}</td>
-  <td title="click to see the details.">#{c.title}</td>
-  <td align='center'>#{c.abstract.strftime("%Y-%m-%d") unless c.abstract.nil?}</td>
-  <td align='center'>#{c.deadline.strftime("%Y-%m-%d")}</td>
-  <td align='center'>#{c.notification.strftime("%Y-%m-%d")}</td>
+  <td>#{c.title}</td>
+  <td align='center' title="#{c.abstract}">#{c.abstract.strftime("%Y-%m-%d") unless c.abstract.nil?}</td>
+  <td align='center' title="#{c.deadline}">#{c.deadline.strftime("%Y-%m-%d")}</td>
+  <td align='center' title="#{c.notification}">#{c.notification.strftime("%Y-%m-%d")}</td>
   <td>#{c.address}</td>
 </tr>
 <?r end ?>
