remove leading /conflist by using standalone server. Not using RackBaseURI anymore.

--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -4,34 +4,34 @@
     <title>Conference List</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <link rel="stylesheet" type="text/css" href="/conflist/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="/css/screen.css" />
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src="/conflist/js/animatedcollapse.js"></script>
+    <script type="text/javascript" src="/js/animatedcollapse.js"></script>
     <script type="text/javascript">
       animatedcollapse.addDiv('add', 'fade=1')
       animatedcollapse.init()
     </script>
 
-    <script type="text/javascript" src="/conflist/js/jjmenu.js"></script>
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jjmenu.css" />
+    <script type="text/javascript" src="/js/jjmenu.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/jjmenu.css" />
 
-    <script type="text/javascript" src="/conflist/js/atooltip.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/conflist/css/atooltip.css" />
+    <script type="text/javascript" src="/js/atooltip.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/atooltip.css" />
 
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/jscal2.css" />
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/border-radius.css" />
-    <link rel="stylesheet" type="text/css" href="/conflist/css/jscal/matrix/matrix.css" />
-    <script type="text/javascript" src="/conflist/js/jscal/jscal2.js"></script>
-    <script type="text/javascript" src="/conflist/js/jscal/lang/en.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/jscal/jscal2.css" />
+    <link rel="stylesheet" type="text/css" href="/css/jscal/border-radius.css" />
+    <link rel="stylesheet" type="text/css" href="/css/jscal/matrix/matrix.css" />
+    <script type="text/javascript" src="/js/jscal/jscal2.js"></script>
+    <script type="text/javascript" src="/js/jscal/lang/en.js"></script>
 
-    <script type="text/javascript" src="/conflist/js/sorttable.js"></script> 
-    <script type="text/javascript" src="/conflist/js/niftycube.js"></script>
+    <script type="text/javascript" src="/js/sorttable.js"></script> 
+    <script type="text/javascript" src="/js/niftycube.js"></script>
 
-    <script type="text/javascript" src="/conflist/js/ckeditor/ckeditor.js"></script> 
+    <script type="text/javascript" src="/js/ckeditor/ckeditor.js"></script> 
     <script type="text/javascript" src="http://shots.snap.com/ss/2a98787da955ced1a537797388b4e9de/snap_shots.js"></script>
 
-    <script type="text/javascript" src="/conflist/js/util.js"></script>
+    <script type="text/javascript" src="/js/util.js"></script>
   </head>
 
   <body>
