niftycube breaks? add niftyCorners.css?

--- a/view/view.xhtml
+++ b/view/view.xhtml
@@ -6,4 +6,10 @@
 #{@c.cfp}
 </div>
 
-<h3>#{a('Edit', '/edit', @c.id)}</h3>
+<table>
+<tr>
+<td><h3>#{a('Edit', '/edit', @c.id)}</h3></td>
+<td> | </td>
+<td><h3>#{a('Home', '/')}</h3></td>
+</tr>
+</table>
